# vm_iot_camera

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
.codebuddy/rules/: CodeStyle.md  Element.md
assets/config/: default.yaml
assets/pag/: Video.pag
assets/shaders/: effects.frag
config/: default.yaml
docs/control/: event_fifo.md
docs/gstreamer/: README.md  aacparse.md  alsasrc.md  appsink.md  audioconvert.md  audioresample.md  avenc_aac.md  facedetect.md  fakesink.md  filesink.md  glcolorconvert.md  gldownload.md  glshader.md  glupload.md  h264parse.md  identity.md  jpegdec.md  jpegenc.md  jpegparse.md  libcamerasrc.md  mp4mux.md  multifilesink.md  opusenc.md  pagfilter.md  queue.md  rtph264pay.md  rtpmp4apay.md  rtpopuspay.md  splitmuxsink.md  tee.md  v4l2src.md  valve.md  videoconvert.md  videorate.md  videoscale.md  voaacenc.md  volume.md  x264enc.md
docs/reference/: hotplug_recovery.md
scripts/: run_web.sh
scripts/bench/: h265_compare.sh
scripts/gst_launch/: _common.sh  dmabuf_gl_probe.sh  pagfilter_smoke.sh  play.sh  preview.sh  probe.sh  record.sh  rtsp.sh  test-launch.sh
scripts/verify/: v1_build_check.sh
shaders/: bilateral.frag  mosaic.frag  passthrough.vert
src/: main.cpp
src/app/: config.cpp  config.h  signal_handler.cpp  signal_handler.h
src/branches/: branch_base.cpp  branch_base.h
src/branches/audio/: audio_branch.cpp  audio_branch.h
src/branches/face/: face_branch.cpp  face_branch.h
src/branches/pag/: pag_branch.cpp  pag_branch.h  pag_effect.cpp  pag_effect.h  pag_sticker.cpp  pag_sticker.h
src/branches/pag_overlay/: pag_overlay.cpp  pag_overlay.h
src/branches/record/: record.cpp  record.h
src/branches/snapshot/: snapshot.cpp  snapshot.h
src/cli/: iotcamctl.cpp
src/common/: launch_pretty.h  log.h
src/control/: control_channel.cpp  control_channel.h  event_fifo_writer.cpp  event_fifo_writer.h
src/filter/: shader_filter.cpp  shader_filter.h
src/pipeline/: pipeline_builder.cpp  pipeline_builder.h
src/plugins/pagfilter/: gstpagfilter.cpp  gstpagfilter.h  pag_blend.cpp  pag_blend.h  pag_sdk.cpp  pag_sdk.h
src/rtsp/: control_channel.cpp  control_channel.h  pipeline_builder.cpp  pipeline_builder.h  rtsp_server.cpp  rtsp_server.h  shader_filter.cpp  snapshot.h
src/util/: alsa_prober.cpp  alsa_prober.h  caps_ranker.cpp  caps_ranker.h  face_prober.cpp  face_prober.h  v4l2_prober.cpp  v4l2_prober.h
tests/: CMakeLists.txt  test_caps_ranker.cpp  test_config.cpp  test_pag_blend.cpp  test_pagfilter.cpp  test_pipeline_builder.cpp  test_v4l2_prober.cpp
tests/demo/: simple_v4l2_grap.c
tests/tools/: probe_dev.cpp
tools/: pag_offscreen_dump.cpp  probe_dev.cpp
web/: README.md  event_fifo.mjs  fifo.mjs  package-lock.json  package.json  routes.mjs  server.mjs
web/static/: app.js  index.html  style.css
